Import of TELS/File-Walker-0.02 from CPAN.
gitpan-cpan-distribution: File-Walker
gitpan-cpan-version:      0.02
gitpan-cpan-path:         TELS/file/File-Walker-0.02.tar.gz
gitpan-cpan-author:       TELS
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -6,3 +6,6 @@ Revision history for File::Walker:
     + step(), reset()
     + start(), current(), curdir(), level(), reset(),
     + dirs(), files(), steps()
+2004-11-20 v0.02 Tels 126 tests
+  * fix NAME section in POD
+
